Move Sync Time string conversion to about_sync_util.cc

This will make it easier to use last sync time for UKM logic.

Bug: 757512
Change-Id: Ic41b28017032cac02cf767595fee4b42af7fe2ee
Reviewed-on: https://chromium-review.googlesource.com/700976
Reviewed-by: Jochen Eisinger <jochen@chromium.org>
Reviewed-by: Sky Malice <skym@chromium.org>
Commit-Queue: Steven Holte <holte@chromium.org>
Cr-Commit-Position: refs/heads/master@{#507914}
Former-commit-id: 30dd3b61cd5b0d467abf38049a7847898402fbec